# haptic_noise

./: README.md  bg_remove.py  capture_pictures.py  main.py  pyproject.toml
docs/: INCONGRUENCY_HARDWARE.md
gen_texture/: README.md  add_side_text.blend  gen_texture.py  gen_texture_example.csv
generation_dotted_texture/: texture_3D.ipynb
generation_dotted_texture/.ipynb_checkpoints/: texture_3D-checkpoint.ipynb
