[project]
name = "haptic-noise"
version = "0.1.0"
description = "Visuohaptic Incongruency project with Jenna and Chloe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "readchar>=4.2.0",
    "odrive>=0.6.8",
    "opencv-contrib-python>=4.10.0.84",
    "numpy-stl>=3.1.2",
    "matplotlib>=3.9.2",
    "pyfqmr>=0.2.1",
    "trimesh>=4.4.7",
    "scipy>=1.13.1",
    "mediapipe>=0.10.14",
    "torch>=2.4.0",
    "numpy>=1.26.3",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "pyserial>=3.5",
    "psutil>=6.0.0",
    "wxpython>=4.2.2",
    "icrpy-utils",
]

[tool.uv.sources]
icrpy-utils = { workspace = true }
